--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a href="#get-in-touch" class="cta-button">Let's get started</a>
             </div>
             <div class="profile-image">
-                <img src="https://placehold.co/600x400" alt="Profile Photo" />
+                <img src="https://via.placeholder.com/600x400" alt="Profile Photo" />
             </div>
         </div>
 
@@ -66,7 +66,7 @@
                     <a href="#" class="view-case-study">View case study ›</a>
                 </div>
                 <div class="case-study-image">
-                    <img src="https://placehold.co/600x400" alt="Case Study Image" />
+                    <img src="https://via.placeholder.com/600x400" alt="Case Study Image" />
                 </div>
             </div>
 
@@ -79,7 +79,7 @@
                     <a href="#" class="view-case-study">View case study ›</a>
                 </div>
                 <div class="case-study-image">
-                    <img src="https://placehold.co/600x400" alt="Case Study Image" />
+                    <img src="https://via.placeholder.com/600x400" alt="Case Study Image" />
                 </div>
             </div>
 
@@ -92,7 +92,7 @@
                     <a href="#" class="view-case-study">View case study ›</a>
                 </div>
                 <div class="case-study-image">
-                    <img src="https://placehold.co/600x400" alt="Case Study Image" />
+                    <img src="https://via.placeholder.com/600x400" alt="Case Study Image" />
                 </div>
             </div>
         </div>
@@ -112,7 +112,7 @@
                     <div class="quote-icon">"</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="client-info">
-                        <img src="https://placehold.co/600x400" alt="Client Avatar" class="client-avatar">
+                        <img src="https://via.placeholder.com/600x400" alt="Client Avatar" class="client-avatar">
                         <span class="client-name">Client Name</span>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                     <div class="quote-icon">"</div>
                     <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="client-info">
-                        <img src="https://placehold.co/600x400" alt="Client Avatar" class="client-avatar">
+                        <img src="https://via.placeholder.com/600x400" alt="Client Avatar" class="client-avatar">
                         <span class="client-name">Client Name</span>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                     <div class="quote-icon">"</div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="client-info">
-                        <img src="https://placehold.co/600x400" alt="Client Avatar" class="client-avatar">
+                        <img src="https://via.placeholder.com/600x400" alt="Client Avatar" class="client-avatar">
                         <span class="client-name">Client Name</span>
                     </div>
                 </div>
@@ -140,7 +140,7 @@
                     <div class="quote-icon">"</div>
                     <p>Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     <div class="client-info">
-                        <img src="https://placehold.co/600x400" alt="Client Avatar" class="client-avatar">
+                        <img src="https://via.placeholder.com/600x400" alt="Client Avatar" class="client-avatar">
                         <span class="client-name">Client Name</span>
                     </div>
                 </div>
@@ -161,7 +161,7 @@
                 <!-- Work Item 1 -->
                 <div class="work-item">
                     <div class="work-image">
-                        <img src="https://placehold.co/600x400" alt="Work Example" class="work-img">
+                        <img src="https://via.placeholder.com/600x400" alt="Work Example" class="work-img">
                     </div>
                     <h3>Work name here</h3>
                     <p>Labore et dolore magna aliqua. sed do eiusmod tempor incididunt ut labore et dolore magna.</p>
@@ -171,7 +171,7 @@
                 <!-- Work Item 2 -->
                 <div class="work-item">
                     <div class="work-image">
-                        <img src="https://placehold.co/600x400" alt="Work Example" class="work-img">
+                        <img src="https://via.placeholder.com/600x400" alt="Work Example" class="work-img">
                     </div>
                     <h3>Work name here</h3>
                     <p>Tempor incididunt ut labore et dolore magna aliqua. sed do eiusmod tempor incididunt.</p>
