--- a/index.html
+++ b/index.html
@@ -58,14 +58,8 @@
     <!-- Clients Section -->
     <section class="clients">
       <div class="container">
-        <h3>Worked with</h3>
-        <div class="client-logos">
-          <div class="client-logo">ClickUp</div>
-          <div class="client-logo">Dropbox</div>
-          <div class="client-logo">PAYCHEX</div>
-          <div class="client-logo">elastic</div>
-          <div class="client-logo">stripe</div>
-        </div>
+        <div class="client-logo">HSSE MIPT</div>
+      </div>
       </div>
     </section>
   </section>
